# alain-utils

./: README.md  pyproject.toml
.github/workflows/: package-testing-all.yml  package-testing-core.yml
alutils/: __init__.py  base.py  bbox.py  camera.py  color.py  config.py  kalman_filter.py  loggers.py  pose.py  ransac.py  so3.py  types.py  video.py
alutils/optimization/: __init__.py  grid_search.py  runge_kutta.py
alutils/plotly/: __init__.py  plotly.py  utils.py
alutils/ros/: ros_markers.py  ros_pointclouds.py
alutils/symbolic/: __init__.py  polynomial.py
tests/: test_bbox.py  test_color.py  test_pose.py
