[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alain-utils-package"
version = "0.1.1"
description = "Python Alain Utils Package"
authors = [
    { name = "Alain Schoebi", email = "alain.schoebi@gmx.ch" }
]
requires-python = ">=3.10"

# Core dependencies
dependencies = [
    "pre-commit",
    "pytest",
    "numpy",
    "colorama",
    "scipy",
    "matplotlib",
]

# All optional dependencies
[project.optional-dependencies]
all = [
    "plotly",
    "opencv-python",
    "tqdm",
    "shapely",
    "pycolmap",
    "numpy<2", # Ensures compatibility with cython-bbox
    "cython-bbox",
    "imageio[ffmpeg] >= 2.21.0",  # Ensures FFmpeg support with imageio
]

[tool.setuptools]
packages = ["alutils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
